# Extractum

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .mcp.json  AGENTS.md  GEMINI.md  README.md  components.json  package-lock.json  package.json  skills-lock.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.mcp.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/extractum-core/: Cargo.toml
src-tauri/crates/extractum-core/src/: compression.rs  error.rs  lib.rs  media_metadata.rs  time.rs
src-tauri/crates/extractum-gemini-browser/: Cargo.toml
src-tauri/crates/extractum-gemini-browser/src/: cdp.rs  error.rs  execution.rs  executor.rs  lib.rs  protocol.rs  reconciliation.rs  run_id.rs  run_log.rs  runtime.rs  sidecar_launch.rs  state.rs  status.rs  submission.rs
src-tauri/crates/extractum-llm/: Cargo.toml
src-tauri/crates/extractum-llm/src/: gemini.rs  lib.rs  openai_compat.rs  provider.rs  streaming.rs
src-tauri/crates/extractum-process/: Cargo.toml
src-tauri/crates/extractum-process/src/: child_process.rs  external_process.rs  lib.rs  process_tree.rs
src-tauri/crates/extractum-prompt-packs/: Cargo.toml
src-tauri/crates/extractum-prompt-packs/src/: assets.rs  browser_port.rs  completion_transport.rs  dto.rs  gemini_browser_stage.rs  json_repair.rs  lib.rs  library.rs  models.rs  projections.rs  result_builder.rs  result_service.rs  run_control.rs  run_store.rs  runtime.rs  runtime_config.rs  seed.rs  source_port.rs  stage_execution.rs  stage_io.rs  stage_output_normalization.rs  stage_request_policy.rs  store.rs  test_schema.rs  validation.rs
src-tauri/migrations/: 0001_current_schema_baseline.sql  0002_migrated_history_opt_in_schema.sql  0003_analysis_telegram_history_scope.sql  0004_source_delete_cascade_indexes.sql  0005_projects_mvp.sql  0006_prompt_pack_mvp.sql  0007_prompt_pack_run_idempotency.sql  0008_prompt_pack_run_labels.sql  0009_prompt_pack_intermediate_entities_artifacts.sql  0010_prompt_pack_runtime_provider.sql  0011_prompt_pack_stage_browser_provenance.sql  0012_projects_redesign.sql  1.sql  12.sql  13.sql  16.sql  18.sql  2.sql  20.sql  21.sql  22.sql  24.sql  26.sql  6.sql  7.sql  8.sql  9.sql
src-tauri/migrations/apalis_sqlite/: 20251018162501_metadata.sql  20260506101935_idempotency_key.sql
src-tauri/prompt-packs/youtube_summary/1.0.0/: pack.json
src-tauri/src/: account_deletion.rs  accounts.rs  analysis.rs  analysis_documents.rs  apalis_jobs.rs  archive_read_model.rs  child_process.rs  compression.rs  db.rs  error.rs  external_process.rs  forum_topics.rs  ingest_provenance.rs  job_helpers.rs  lib.rs  llm.rs  main.rs  media.rs  migrations.rs  process_tree.rs  projects.rs  readiness.rs  secret_store.rs  source_ingest.rs  sources.rs  sql_helpers.rs  takeout_import.rs  telegram.rs  telegram_session_store.rs  time.rs  topic_memberships.rs  tx.rs
src-tauri/src/analysis/: chat.rs  corpus.rs  events.rs  fixtures.rs  groups.rs  mod.rs  models.rs  report.rs  report_commands.rs  state.rs  store.rs  templates.rs  trace.rs
src-tauri/src/analysis/corpus/: live.rs  snapshot.rs  source_resolution.rs
src-tauri/src/analysis/fixtures/: seed.rs
src-tauri/src/analysis/report/: capture.rs  lifecycle.rs  phases.rs  requests.rs
src-tauri/src/analysis/store/: read_model.rs  runs.rs  setup.rs  snapshot.rs
src-tauri/src/diagnostics/: database.rs  dto.rs  mod.rs  redaction.rs  runtime.rs
src-tauri/src/gemini_browser/: browser_executor.rs  cdp_chrome.rs  cdp_contract.rs  commands.rs  domain_error.rs  execution.rs  executor.rs  jobs.rs  mod.rs  paths.rs  portable_state.rs  protocol.rs  reconciliation.rs  run_id.rs  run_log.rs  runtime.rs  sidecar.rs  sidecar_launch.rs  state.rs  status.rs  submission.rs  types.rs
src-tauri/src/library_sources/: mod.rs  models.rs
src-tauri/src/llm/: app_types.rs  gemini.rs  mod.rs  openai_compat.rs  profiles.rs  provider.rs  runner.rs  scheduler.rs  streaming.rs  types.rs
src-tauri/src/migrations/: analysis_documents.rs  baseline_reset.rs  source_identity_cleanup.rs  telegram_item_native_identity.rs  topic_membership_materialization.rs  youtube_typed_source_metadata.rs
src-tauri/src/notebooklm_export/: chunker.rs  filename.rs  glossary.rs  links.rs  media.rs  message_mapping.rs  mod.rs  model.rs  query.rs  renderer.rs
src-tauri/src/projects/: data_range.rs  mod.rs  read_model.rs
src-tauri/src/prompt_packs/: assets.rs  browser_adapter.rs  completion_transport.rs  dto.rs  event_adapter.rs  events.rs  gemini_browser_stage.rs  json_repair.rs  library.rs  library_command.rs  mod.rs  projections.rs  result_builder.rs  result_commands.rs  result_service.rs  run_control.rs  run_store.rs  runtime.rs  runtime_commands.rs  runtime_config.rs  seed.rs  seed_command.rs  source_adapter.rs  source_port.rs  stage_execution.rs  stage_io.rs  stage_output_normalization.rs  stage_request_policy.rs  store.rs  test_schema.rs  validation.rs  youtube_summary.rs  youtube_summary_execution.rs  youtube_summary_execution_tests.rs  youtube_summary_facade_tests.rs  youtube_summary_preflight.rs  youtube_summary_preflight_tests.rs  youtube_summary_run_store.rs  youtube_summary_snapshots.rs  youtube_summary_snapshots_tests.rs  (+6 more)
src-tauri/src/prompt_packs/youtube_summary/: app_test_support.rs  domain_snapshots_tests.rs  entities.rs  entities_tests.rs  execution.rs  execution_result.rs  execution_tests.rs  facade_tests.rs  gem_analysis.rs  mod.rs  outputs.rs  (+18 more)
src-tauri/src/sources/: avatar.rs  identity.rs  identity_repair.rs  items.rs  legacy_metadata_cleanup.rs  mod.rs  peer_resolution.rs  settings.rs  store.rs  sync.rs  test_support.rs  topics.rs  types.rs
src-tauri/src/takeout_import/: export_dc.rs  forum_topics.rs  migrated_history.rs  mod.rs  pagination.rs  raw_parse.rs  recovery.rs  state.rs  validation_diagnostics.rs
src-tauri/src/youtube/: captions.rs  comments.rs  cookies.rs  detail.rs  dto.rs  errors.rs  job_commands.rs  jobs.rs  metadata.rs  mod.rs  playlist.rs  preview.rs  process_runtime.rs  runtime.rs  settings.rs  source_metadata.rs  thumbnail.rs  transcript_reader.rs  url.rs  ytdlp.rs
(+1321 files in other folders)
