[package]
name = "extractum"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "extractum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
csp-verification = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apalis = "=1.0.0-rc.8"
apalis-sqlite = "=1.0.0-rc.8"
parking_lot = "0.12"
tower = { version = "0.5", features = ["timeout", "util"] }
secrecy = "0.8"
jsonschema = { version = "0.46.5", default-features = false }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
grammers-client = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa", default-features = false }
grammers-session = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa", default-features = false, features = ["serde"] }
grammers-mtsender = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa" }
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa", features = ["deserializable-functions"] }
zstd = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
sha2 = "0.10"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
url = "2"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
