[workspace]
members = [".", "crates/extractum-core", "crates/extractum-gemini-browser", "crates/extractum-llm", "crates/extractum-prompt-packs"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = "1"
tokio-util = "0.7"
url = "2"
zstd = "0.13"

[package]
name = "extractum"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "extractum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
csp-verification = ["tauri/devtools"]
prompt-pack-dev-fixtures = ["extractum-prompt-packs/dev-fixtures"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-mcp-bridge = "0.11"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
apalis = "=1.0.0-rc.8"
apalis-sqlite = "=1.0.0-rc.8"
parking_lot = { workspace = true }
tower = { version = "0.5", features = ["timeout", "util"] }
secrecy = { workspace = true }
sqlx = { workspace = true }
grammers-client = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa", default-features = false }
grammers-session = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa", default-features = false, features = ["serde"] }
grammers-mtsender = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa" }
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers", rev = "1f901ce6e973fdcf0e74267f3d8efad5c729daaa", features = ["deserializable-functions"] }
zstd = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
anyhow = "1.0"
sha2 = { workspace = true }
dirs = "6"
reqwest = { workspace = true }
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
time = { workspace = true }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
url = { workspace = true }
tempfile = { workspace = true }
extractum-core = { path = "crates/extractum-core" }
extractum-gemini-browser = { path = "crates/extractum-gemini-browser" }
extractum-llm = { path = "crates/extractum-llm" }
extractum-prompt-packs = { path = "crates/extractum-prompt-packs" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
