[package]
name = "extractum-gemini-browser"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-util.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "test-util"] }
