[package]
name = "extractum-llm"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
extractum-core = { path = "../extractum-core" }
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time"] }
tokio-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "net", "rt", "test-util"] }
