[package]
name = "extractum-process"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
